Menu and sync button

--- a/public_html/home.html
+++ b/public_html/home.html
@@ -20,7 +20,7 @@
                             <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                         </div>
                         <div class="col-sm-4 navbar-header">
-                            <span><img class="miele-logo" src="../img/logo.png" alt="Miele Logo" width="100" height="50"></span>
+                            <span><img class="miele-logo" src="img/logo.png" alt="Miele Logo" width="100" height="50"></span>
                         </div>
                         <!--//<div class="col-sm-4 navbar-collapse collapse"> -->
                         <div class="col-sm-4 navbar-header"> 
