--- a/public_html/lines.html
+++ b/public_html/lines.html
@@ -5,12 +5,12 @@
     <head>
         <title>Lineas</title>
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-        <link rel="stylesheet" href="/apis/bootstrap/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/lines.css"/>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-        <script data-main="/js/main" src="/apis/require.js"></script>
+        <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
         <div id="pageWrapper">
@@ -22,7 +22,7 @@
                             <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                         </div>
                         <div class="col-sm-4 navbar-header">
-                            <span><img class="miele-logo" src="../img/logo.png" alt="Miele Logo" width="100" height="50"></span>
+                            <span><img class="miele-logo" src="img/logo.png" alt="Miele Logo" width="100" height="50"></span>
                         </div>
                         <!--//<div class="col-sm-4 navbar-collapse collapse"> -->
                         <div class="col-sm-4 navbar-header"> 
