--- a/public_html/productDesc.html
+++ b/public_html/productDesc.html
@@ -5,12 +5,12 @@
     <head>
         <title>Producto</title>
         <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-        <link rel="stylesheet" href="/apis/bootstrap/css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="apis/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="apis/bootstrap3-dialog/dist/css/bootstrap-dialog.css"/>
         <link rel="stylesheet" href="css/menu.css"/>
         <link rel="stylesheet" href="css/productDesc.css"/>
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-        <script data-main="/js/main" src="/apis/require.js"></script>
+        <script data-main="js/main" src="apis/require.js"></script>
     </head>
     <body>
         <div id="pageWrapper">
@@ -22,7 +22,7 @@
                             <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                         </div>
                         <div class="col-sm-4 navbar-header">
-                            <span><img class="miele-logo" src="../img/logo.png" alt="Miele Logo" width="100" height="50"></span>
+                            <span><img class="miele-logo" src="img/logo.png" alt="Miele Logo" width="100" height="50"></span>
                         </div>
                         <!--//<div class="col-sm-4 navbar-collapse collapse"> -->
                         <div class="col-sm-4 navbar-header"> 
@@ -40,75 +40,6 @@
                 </div>
             </div>
             <div class="col-sm-12 boxes-content" id="boxContent"></div>
-
-
-            <!-- The Modal -->
-            <div id="myModal" class="modal">
-              <!-- Modal content -->
-              <div class="modal-content">
-                <div class="modal-header">
-                    <span class="close">&times;</span>
-                    <h2>Modal Header</h2>
-                </div>
-                <div class="modal-body">
-                    <!-- Slideshow container -->
-                    <div class="slideshow-container">
-
-                        <!-- Full-width images with number and caption text -->
-                        <div class="mySlides">
-                            <div class="numbertext">1 / 5</div>
-                            <img class="slider-img" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg">
-                            <div class="text">Caption Text</div>
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">2 / 5</div>
-                            <img class="slider-img" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg">
-                            <div class="text">Caption Two</div>
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">3 / 5</div>
-                            <img class="slider-img" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg">
-                            <div class="text">Caption Three</div>
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">4 / 5</div>
-                            <img class="slider-img" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg">
-                            <div class="text">Caption Four</div>
-                        </div>
-
-                        <div class="mySlides">
-                            <div class="numbertext">5 / 5</div>
-                            <img class="slider-img" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg">
-                            <div class="text">Caption Five</div>
-                        </div>
-
-                        <!-- Next and previous buttons -->
-                        <!-- 
-                        <a class="prev">&#9666;</a>
-                        <a class="next">&#9656;</a>
-                        -->
-                        <a class="prev">&#10094;</a>
-                        <a class="next">&#10095;</a>
-                    </div>
-                    <br>
-
-                </div>
-                <div class="modal-footer">
-                    <!-- The dots/circles -->
-                    <div style="text-align:center">
-                        <span><img class="dot-img" id="1" src="https://shop.miele.com.mx/811-home_default/lavadora-w1.jpg"></span> 
-                        <span><img class="dot-img" id="2" src="https://shop.miele.com.mx/821-home_default/lavadora-w1.jpg"></span> 
-                        <span><img class="dot-img" id="3" src="https://shop.miele.com.mx/824-home_default/lavadora-w1.jpg"></span>
-                        <span><img class="dot-img" id="4" src="https://shop.miele.com.mx/822-home_default/lavadora-w1.jpg"></span> 
-                        <span><img class="dot-img" id="5" src="https://shop.miele.com.mx/823-home_default/lavadora-w1.jpg"></span>  
-                    </div>
-                </div>
-              </div>
-            </div>
-            <!-- The Modal -->
         </div>
     </body> 
 
