--- a/public_html/surveys.html
+++ b/public_html/surveys.html
@@ -17,11 +17,15 @@
         <div class="background-surveys"></div>
             <div class="searcher-content">
                 <div class="navbar">
-                    <div class="container">
-                        <div class="navbar-header">
+                    <div class="col-sm-12 container">
+                        <div class="col-sm-4 navbar-header">
                             <span class="navbar-brand btn-menu glyphicon glyphicon-menu-hamburger" id="menu-toggle"></span>
                         </div>
-                        <div class="navbar-collapse collapse">
+                        <div class="col-sm-4 navbar-header">
+                            <span><img class="miele-logo" src="img/logo.png" alt="Miele Logo" width="100" height="50"></span>
+                        </div>
+                        <!--//<div class="col-sm-4 navbar-collapse collapse"> -->
+                        <div class="col-sm-4 navbar-header">
                             <form class="navbar-form">
                                 <div class="form-group" style="display:inline;">
                                     <div class="input-group" style="display:table;">
